# yolov8x_p2

./: .gitignore  README.md  commands.txt  config.json  display_port9000.sh  error_analysis.py  export2onnx.py  make_samples.py  make_samples_640.py  model_inspect.py  payload_contents.py  rewrite_yolov8mp2_4_outs.py  run_accelmode.py  run_modelsdk.py  run_onnx.py  run_onnx_4_outs.py  run_onnx_single_out.py  test.py  utils.py  yolo_model.py
neat/: README.md  async_cpp.md  async_py.md  sync_cpp.md  sync_py.md
neat/cpp/: CMakeLists.txt  main.cpp  main_async.cpp  main_sync.cpp
neat/py/: run_neat_async.py  run_neat_sync.py  run_neat_yolov8x_p2.py
pipeline1/: .hash  application.json
pipeline1/core/utils/: CMakeLists.txt
pipeline1/dependencies/gst_app/live_trace_reader/plugins/kpi_sender/: kpi.c  kpi_sender.c  mqtt.c
pipeline1/dependencies/gst_app/utils/include/: cmdline_utils.h
pipeline1/plugins/processcvu/: .hash_new
pipeline1/plugins/processcvu/cfg/: 0_postproc.json
pipeline1/plugins/processmla/: CMakeLists.txt
pipeline1/plugins/processmla/cfg/: 0_process_mla.json
pipeline1/plugins/simaaisrc/: CMakeLists.txt  gstsimaaisrc.cc  gstsimaaisrc.h
pipeline1/plugins/simaaisrc/res/: img1.rgb  img10.rgb  img2.rgb  img3.rgb  img4.rgb  img5.rgb  img6.rgb  img7.rgb  img8.rgb  img9.rgb
pipeline1/plugins/yolov8xp2_postproc_overlay/: payload.py  utils.py
pipeline2/: application.json
pipeline2/.project/: pluginsInfo.json
pipeline2/plugins/processmla/: gstsimaaiprocessmla.cpp
pipeline2/plugins/processmla/cfg/: 0_process_mla.json
pipeline2/plugins/simaaisrc/: README.md
pipeline2/plugins/simaaisrc/res/: img1.rgb
pipeline2/plugins/yolov8xp2_postproc_overlay/: payload.py
pipeline3/: application.json
pipeline3/.project/: pluginsInfo.json
pipeline3/plugins/genericboxdecode/: .hash_new
pipeline3/plugins/genericboxdecode/cfg/: 0_boxdecoder.json
pipeline3/plugins/overlay/: CMakeLists.txt  gstoverlaycommon.cc  gstsimaaioverlay2.cc
pipeline3/plugins/processcvu/cfg/: 0_preproc.json
pipeline3/plugins/processmla/cfg/: 0_process_mla.json
pipeline3/plugins/simaaisrc/res/: img1.nv12  img10.nv12  img2.nv12  img3.nv12  img4.nv12  img5.nv12  img6.nv12  img8.nv12  img9.nv12
pipeline3/plugins/templates/: .hash_new
pipeline3/plugins/templates/aggregator_python/python/: README.md
pipeline3/plugins/yolov8xp2_postproc_overlay/: payload.py  utils.py
pipeline4/: application.json
pipeline4/.project/: pluginsInfo.json
pipeline4/dependencies/gst_app/: pipeline.cpp  pipeline.h
pipeline4/dependencies/gst_app/live_trace_reader/api/: live_trace_reader_api.c
pipeline4/plugins/genericboxdecode/: CMakeLists.txt  README.md
pipeline4/plugins/genericboxdecode/cfg/: 0_boxdecoder.json
pipeline4/plugins/overlay/: gstoverlaycommon.h  gstsimaaioverlay2.h
pipeline4/plugins/overlay/ext/: README.md  deprecated_overlay_cv2.h  image.h  overlay_renderer.h  overlay_types.h  yuv420.cc  yuv420.h
pipeline4/plugins/processcvu/: CMakeLists.txt
pipeline4/plugins/processmla/: .hash_new
pipeline4/plugins/processmla/cfg/: 0_process_mla.json
pipeline4/plugins/simaaisrc/: .hash_new
pipeline4/plugins/simaaisrc/res/: img1.nv12  img2.nv12  img3.nv12  img4.nv12  img5.nv12  img7.nv12
pipeline5/: application.json
pipeline5/dependencies/gst_app/tests/: test_param_parser.cpp
pipeline5/plugins/genericboxdecode/: payload.cpp
pipeline5/plugins/overlay/: overlay_profile.h
pipeline5/plugins/overlay/ext/: overlay.h
pipeline5/plugins/processcvu/cfg/: 0_preproc.json
pipeline5/plugins/processmla/cfg/: 0_process_mla.json
pipeline5/plugins/templates/aggregator/: agg_template.h
pipeline5/plugins/templates/aggregator_old/: agg_template.h
pipeline5/plugins/templates/aggregator_python/python/: python_plugin_template.py
pipeline6/: application.json
pipeline6/.project/: pluginsInfo.json
pipeline6/plugins/overlay/: .hash_new  README.md
pipeline6/plugins/overlay/res/: labels.txt
pipeline6/plugins/processcvu/cfg/: 0_postproc.json
pipeline6/plugins/processmla/cfg/: 0_process_mla.json
pipeline6/plugins/templates/aggregator_python/python/: payload.py
yolov8x-p2_opt_4o_mpk_simaaisrc/: .hash  application.json  yolov8x-p2_opt_4o_mpk_simaaisrc_plugin_version_index.json
yolov8x-p2_opt_4o_mpk_simaaisrc/.project/: pluginsInfo.json
yolov8x-p2_opt_4o_mpk_simaaisrc/dependencies/gst_app/: CMakeLists.txt  gst_app.cpp
yolov8x-p2_opt_4o_mpk_simaaisrc/dependencies/gst_app/live_trace_reader/plugins/kpi_sender/: kpi.h  kpi_sender.h  mqtt.h
yolov8x-p2_opt_4o_mpk_simaaisrc/dependencies/gst_app/utils/src/: cmdline_utils.cpp
yolov8x-p2_opt_4o_mpk_simaaisrc/plugins/processcvu/: gstsimaaiprocesscvu.cpp
yolov8x-p2_opt_4o_mpk_simaaisrc/plugins/processcvu/cfg/: 0_postproc.json  0_preproc.json
yolov8x-p2_opt_4o_mpk_simaaisrc/plugins/processmla/cfg/: 0_process_mla.json
yolov8x-p2_opt_4o_mpk_simaaisrc/plugins/simaaisrc/: CMakeLists.txt
yolov8x-p2_opt_4o_mpk_simaaisrc/plugins/simaaisrc/res/: img2.rgb
yolov8x-p2_opt_4o_mpk_simaaisrc/plugins/yolov8xp2_postproc_overlay/: payload.py
